--- a/index.html
+++ b/index.html
@@ -370,9 +370,9 @@
 
     </div>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-    <script src="/scripts/sidebar-menu.js"></script>
-    <script src="/scripts/fade-slider.js"></script>
-    <script src="/scripts/filter.js"></script>
+    <script src="./scripts/sidebar-menu.js"></script>
+    <script src="./scripts/fade-slider.js"></script>
+    <script src="./scripts/filter.js"></script>
     
 </body>
 </html>
