--- a/index.html
+++ b/index.html
@@ -370,9 +370,9 @@
 
     </div>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-    <script src="../jss/sidebar-menu.js"></script>
-    <script src="../jss/fade-slider.js"></script>
-    <script src="../jss/filter.js"></script>
-    <script src="../jss/test1.js"></script>
+    <script src="/lost-shirt_project/jss/sidebar-menu.js"></script>
+    <script src="/lost-shirt_project/jss/fade-slider.js"></script>
+    <script src="/lost-shirt_project/jss/filter.js"></script>
+    <script src="/lost-shirt_project/jss/test1.js"></script>
 </body>
 </html>
